oriterm_core/tests/snapshots/vttest__97x33_02_screen_03.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567
8901234567890123456789012345678901                                                               
  This is 132 column mode, light background.                                                     
   This is 132 column mode, light background.                                                    
    This is 132 column mode, light background.                                                   
     This is 132 column mode, light background.                                                  
      This is 132 column mode, light background.                                                 
       This is 132 column mode, light background.                                                
        This is 132 column mode, light background.                                               
         This is 132 column mode, light background.                                              
          This is 132 column mode, light background.                                             
           This is 132 column mode, light background.                                            
            This is 132 column mode, light background.                                           
             This is 132 column mode, light background.                                          
              This is 132 column mode, light background.                                         
               This is 132 column mode, light background.                                        
                This is 132 column mode, light background.                                       
                 This is 132 column mode, light background.                                      
                  This is 132 column mode, light background.                                     
                   This is 132 column mode, light background.Push <RETURN>
