oriterm_core/tests/snapshots/vttest__97x33_02_screen_04.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456 
                                                                                                 
  This is 97 column mode, light background.                                                      
   This is 97 column mode, light background.                                                     
    This is 97 column mode, light background.                                                    
     This is 97 column mode, light background.                                                   
      This is 97 column mode, light background.                                                  
       This is 97 column mode, light background.                                                 
        This is 97 column mode, light background.                                                
         This is 97 column mode, light background.                                               
          This is 97 column mode, light background.                                              
           This is 97 column mode, light background.                                             
            This is 97 column mode, light background.                                            
             This is 97 column mode, light background.                                           
              This is 97 column mode, light background.                                          
               This is 97 column mode, light background.                                         
                This is 97 column mode, light background.                                        
                 This is 97 column mode, light background.                                       
                  This is 97 column mode, light background.                                      
                   This is 97 column mode, light background.Push <RETURN>
